# deployerreplacement

./: .gitignore  CLAUDE.md  PHASE5_PLAN.md  PLAN.md  README.md  install.sh  pyproject.toml  stackr.yml.example
.claude/: check_version.sh
.github/workflows/: ci.yml  integration.yml
catalog/_base/: traefik-labels.yml.j2
catalog/ai/ollama/: compose.yml.j2
catalog/ai/open-webui/: app.yml  compose.yml.j2
catalog/dashboard/homepage/: app.yml  compose.yml.j2
catalog/database/mariadb/: app.yml  compose.yml.j2
catalog/database/mongo/: app.yml  compose.yml.j2
catalog/database/postgres/: compose.yml.j2
catalog/database/redis/: app.yml  compose.yml.j2
catalog/gaming/minecraft/: app.yml
catalog/management/dasherr/: app.yml  compose.yml.j2
catalog/management/dozzle/: app.yml
catalog/management/flame/: app.yml  (+1 more)
docs/: user-guide.html
stackr/: __init__.py  __main__.py  alerts.py  backup.py  catalog.py  catalog_sync.py  cli.py  config.py  deployer.py  dns_providers.py  doctor.py  images.py  middleware.py  migrate.py  mounts.py  network.py  renderer.py  secrets.py  service.py  state.py  status.py  tui.py  validator.py
stackr/web/: __init__.py  app.py  routes.py
tests/: test_alerts.py  test_backup.py  test_catalog.py  test_catalog_sync.py  test_config.py  test_deploy_simulation.py  test_deployer.py  test_dns_providers.py  test_doctor.py  test_images.py  test_init.py  test_middleware.py  test_migrate.py  test_mounts.py  test_renderer.py  test_secrets.py  test_security_apps.py  test_state.py  test_tui.py  test_upgrade.py  test_validator.py  test_web.py
(+159 files in other folders)
